the_project/todo-app/manifests/load-balancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoapp-lb
  namespace: project
  labels:
    app: todoapp
spec:
  type: LoadBalancer
  selector:
    app: todoapp
  ports:
    - name: http-todoapp
      port: 80
      protocol: TCP
      targetPort: 3001
    - name: http-backendtodo
      port: 8080
      protocol: TCP
      targetPort: 3002
