the_project/todo-app/manifests/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-stset
  namespace: project
spec:
  serviceName: postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: postgresapp
  template:
    metadata:
      labels:
        app: postgresapp
    spec:
      containers:
        - name: postgres
          image: postgres:alpine3.22
          ports:
            - containerPort: 5432
              name: postgres-port
          volumeMounts:
            - name: postgres-data-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres

  volumeClaimTemplates:
    - metadata:
        name: postgres-data-storage
        namespace: project
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: project
  labels:
    app: postgresapp
spec:
  selector:
    app: postgresapp
  clusterIP: None
  ports:
    - port: 5432
      targetPort: postgres-port
      name: postgres
